--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_dotenv: ^6.0.0
   path_provider: ^2.1.5
   uuid: ^4.5.2
+  phone_numbers_parser: ^8.1.0
+  email_validator: ^2.1.17
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
