--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+3
+version: 1.0.1+4
 
 environment:
   sdk: ^3.10.4
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
   supabase_flutter: ^2.12.0
   speech_to_text: ^7.3.0
   shared_preferences: ^2.5.4
@@ -102,10 +103,14 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "docs/play-store-icon-512.png"
+  remove_alpha_ios: true
+  image_path: "assets/app_icon.png"
   macos:
     generate: true
-    image_path: "docs/play-store-icon-512.png"
+    image_path: "assets/app_icon.png"
   web:
     generate: true
-    image_path: "docs/play-store-icon-512.png"
+    image_path: "assets/app_icon.png"
+  windows:
+    generate: true
+    image_path: "assets/app_icon.png"
