--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+7
+version: 1.1.0+8
 
 environment:
   sdk: ^3.10.4
@@ -46,6 +46,10 @@ dependencies:
   phone_numbers_parser: ^8.1.0
   email_validator: ^2.1.17
   url_launcher: ^6.2.5
+  # Local-first SQLite database
+  drift: ^2.22.1
+  sqlite3_flutter_libs: ^0.5.28
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +62,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
+  # Drift code generation
+  drift_dev: ^2.22.1
+  build_runner: ^2.4.14
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
